Add third post with LaTeX rendering

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,9 @@
 {{ define "main" }}
   <article>
+  <p><a href="/">← Back to Home</a></p>
     <h1>{{ .Title }}</h1>
     {{ .Content }}
   </article>
+  
+
 {{ end }}
