--- a/layouts/home.html
+++ b/layouts/home.html
@@ -2,5 +2,19 @@
   <div class="homepage">
     <h1>{{ .Title }}</h1>
     <div>{{ .Content }}</div>
+
+    <h2>Recent Posts</h2>
+    <ul>
+      {{ range first 5 (where .Site.RegularPages "Type" "posts") }}
+        <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+      {{ end }}
+    </ul>
+
+    <h2>Tags</h2>
+    <ul>
+      {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
+        <li><a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}">{{ $name }}</a></li>
+      {{ end }}
+    </ul>
   </div>
 {{ end }}
