Add homepage link to dihedral3 visualization

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -9,6 +9,8 @@
         <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
       {{ end }}
     </ul>
+	<p><a href="/custom/dihedral3.html">Explore Dihedral Group Visualization</a></p>
+
 
     <h2>Tags</h2>
     <ul>
