--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,6 +4,9 @@
     <h1>{{ .Title }}</h1>
     {{ .Content }}
   </article>
-  
+  <aside class="toc-panel">
+  {{ .TableOfContents }}
+</aside>
+
  <p><a href="/">← Back to Home</a></p>
 {{ end }}
